<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Arabic Math Solver</string>
    <string name="undo_str">الرجوع</string>
    <string name="save_str">حفظ</string>
    <string name="color_str">لون</string>
    <string name="gallery_str">معرض الصور</string>
    <string name="move_str">تحريك</string>
    <string name="redo">إعادة</string>
    <string name="eraser_str">الممحاة</string>
    <string name="pen_str">القلم</string>
    <string name="simplify_str">تبسيط</string>
    <string name="polynomial_str">إيجاد الحدود</string>
    <string name="differentiate_str">تفاضل</string>
    <string name="integrate_str">تكامل</string>
    <string name="simplify_method_name">Simplify</string>
    <string name="polynomial_method_name">Polynomial</string>
    <string name="differentiate_method_name">Differentiate</string>
    <string name="integrate_method_name">Integrate</string>
    <string name="bottom_desc_str">اختر العملية المطبقة على المعادلة</string>
    <string name="bottom_title_str">العمليات</string>
    <string name="pred_textview_str">المعادلة :\nالحل :\nالخطأ :</string>
    <string name="equation_str">المعادلة</string>
    <string name="solution_str">الحل</string>
    <string name="error_str">الخطأ</string>
    <string name="delete_all_str">مسح الكل</string>
    <string name="dialog_clear_all_msg_str">هذا سيقوم بمسح كل شئ ولا يمكن التراجع عن العملية، إكمال ؟</string>
    <string name="dialog_clear_all_title_str">هل انت متأكد ؟</string>
    <string name="confirm_str">تأكيد</string>
    <string name="cancel_str">إلغاء</string>
    <string name="internet_str">لا يوجد اتصال بالإنترنت، تحتاج اتصال بالإنترنت للإكمال</string>

</resources>