<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <!-- If you add any method here
        be sure to add to "getMethodNameFromItem" method in CanvasFragment for it to work-->
        <item
            android:id="@+id/simplify_method"
            android:enabled="true"
            android:icon="@drawable/ic_sen"
            android:title="@string/simplify_str"
            android:titleCondensed="@string/simplify_method_name"/>
        <item
            android:id="@+id/polynomial_method"
            android:titleCondensed="@string/polynomial_method_name"
            android:enabled="true"
            android:icon="@drawable/ic_move"
            android:title="@string/polynomial_str" />
        <item
            android:id="@+id/differentiate_method"
            android:enabled="true"
            android:icon="@drawable/ic_eraser"
            android:title="@string/differentiate_str"
            android:titleCondensed="@string/differentiate_method_name"
            />
        <item
            android:id="@+id/integrate_method"
            android:enabled="true"
            android:icon="@drawable/ic_pen"
            android:title="@string/integrate_str"
            android:titleCondensed="@string/integrate_method_name"
            />
    </group>
</menu>