<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name=".CanvasFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/scrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/grey"
        android:alpha="0.3"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:elevation="2dp"/>
    <TextView
        android:id="@+id/pred_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pred_textview_str"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pred_textview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/btn_save"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_weight="1"
                android:contentDescription="@string/save_str"
                android:src="@drawable/ic_floppy_disk"
                android:text="@string/save_str" />

            <ImageButton
                android:id="@+id/btn_gallery"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_weight="1"
                android:contentDescription="@string/gallery_str"
                android:src="@mipmap/ic_gallery"
                android:text="@string/gallery_str" />

        </LinearLayout>

        <com.arabic.math.solver.drawview.DrawView
            android:id="@+id/draw_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="2dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/methods_fab"
            style="@style/Theme.ArabicMathSolver.lowerMethodsFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/undo_str"
            app:layout_anchor="@id/bottom_tools_nav"
            app:layout_anchorGravity="top|end"
            app:srcCompat="@drawable/ic_undo"
            app:tint="@color/fab_selector" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/undo_fab"
            style="@style/Theme.ArabicMathSolver.lowerToolsFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/undo_str"
            android:translationY="-10dp"
            app:layout_anchor="@id/bottom_tools_nav"
            app:layout_anchorGravity="top|start"
            app:srcCompat="@drawable/ic_undo"
            app:tint="@color/fab_selector" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/redo_fab"
            style="@style/Theme.ArabicMathSolver.lowerToolsFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/redo"
            app:layout_anchor="@id/undo_fab"
            app:layout_anchorGravity="end"
            app:srcCompat="@drawable/ic_redo"
            app:tint="@color/fab_selector" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_tools_nav"
            style="@style/Widget.MaterialComponents.BottomNavigationView.PrimarySurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:menu="@menu/bottom_tools_menu" />

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/bottom_methods_nav"
            style="@style/Widget.App.NavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:behavior_hideable="true"
            app:layout_behavior="@string/bottom_sheet_behavior"
            app:menu="@menu/methods_menu" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>